--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "html2canvas": "^1.0.0-rc.3",
+    "passport": "^0.4.0",
+    "passport-spotify": "^1.0.1",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
     "shrink-ray-current": "^3.0.2"
