--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "force": "0.0.3",
     "html2canvas": "^1.0.0-rc.3",
     "passport": "^0.4.0",
     "passport-spotify": "^1.0.1",
