--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "firebase-admin": "^8.0.0",
     "force": "0.0.3",
     "html2canvas": "^1.0.0-rc.3",
     "node-fetch": "^2.6.0",
