--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "express-session": "^1.16.2",
     "firebase-admin": "^8.0.0",
     "force": "0.0.3",
     "html2canvas": "^1.0.0-rc.3",
-    "mongoose": "^5.5.14",
+    "mongoose": "^5.5.15",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.0",
     "passport-spotify": "^1.0.1",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
     "shrink-ray-current": "^3.0.2",
-    "spotify-web-api-node": "^4.0.0"
+    "spotify-web-api-node": "^4.0.0",
+    "uuid": "^3.3.2"
   }
 }
