--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.16.2",
+    "fb": "^2.0.0",
     "firebase-admin": "^8.0.0",
     "force": "0.0.3",
     "html2canvas": "^1.0.0-rc.3",
+    "login-with-twitter": "^1.2.0",
     "mongoose": "^5.5.15",
+    "musicbrainz-api": "^0.3.8",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.0",
     "passport-spotify": "^1.0.1",
@@ -25,6 +28,7 @@
     "request": "^2.88.0",
     "shrink-ray-current": "^3.0.2",
     "spotify-web-api-node": "^4.0.0",
+    "twitter": "^1.7.1",
     "uuid": "^3.3.2"
   }
 }
