--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "description": "Linernote wil Spotify, Youtube en Social Media content van artiesten samenbrengen in één app, aangevuld door concertkaartjes.",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon -r esm app.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
+    "esm": "^3.2.25",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.16.2",
