--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "force": "0.0.3",
     "genius-api": "^0.4.1",
     "html2canvas": "^1.0.0-rc.3",
+    "http": "0.0.0",
     "login-with-twitter": "^1.2.0",
     "mongoose": "^5.5.15",
     "musicbrainz-api": "^0.3.8",
@@ -30,6 +31,7 @@
     "querystring": "^0.2.0",
     "request": "^2.88.0",
     "shrink-ray-current": "^3.0.2",
+    "socket.io": "^2.2.0",
     "spotify-web-api-node": "^4.0.0",
     "twitter": "^1.7.1",
     "uuid": "^3.3.2"
