--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Linernote brings Spotify, Youtube, articles and Social Media content from artists together in one app, supplemented by concert tickets.",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon -r esm app.js"
+    "start": "node -r esm app.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
